Add navbar and input field.

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -1,17 +1,32 @@
 <!DOCTYPE html>
 
 <head>
-  <link href="style.css" rel="stylesheet">
-  <style>
+  <!-- TODO: Add http://clipart-library.com/lobster-cliparts.html somewhere in the extension -->
+  <link href="assets/bulma.min.css" rel="stylesheet">
+  <!-- <style>
     button {
       height: 30px;
       width: 30px;
       outline: none;
     }
 
-  </style>
+  </style> -->
 </head>
 
 <body>
-  <button id="changeColor"></button>
+  <nav class="navbar" role="navigation" aria-label="main navigation">
+    <div class="navbar-brand">
+      <div class="navbar-item mt-2">
+        <figure class="image is-32x32">
+          <img src="assets/lobster.jpg">
+        </figure>
+      </div>
+      <div class="navbar-item">
+        <h1 class="title is-4">Lobster Ice Cream</h1>
+      </div>
+    </div>
+  </nav>
+  <form>
+    <input class="input" />
+  </form>
 </body>
