--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -3,17 +3,9 @@
 <head>
   <!-- TODO: Add http://clipart-library.com/lobster-cliparts.html somewhere in the extension -->
   <link href="assets/bulma.min.css" rel="stylesheet">
-  <!-- <style>
-    button {
-      height: 30px;
-      width: 30px;
-      outline: none;
-    }
-
-  </style> -->
 </head>
 
-<body>
+<body class="mx-1 my-1">
   <nav class="navbar" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
       <div class="navbar-item mt-2">
@@ -28,5 +20,43 @@
   </nav>
   <form>
     <input class="input" />
+  </form>
+  <article class="media">
+    <div class="media-content">
+      <div class="content">
+        <p>
+          <strong>John Smith</strong> <small>@johnsmith</small>
+          <small>31m</small>
+          <br>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare
+          magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa
+          sem. Etiam finibus odio quis feugiat facilisis.
+        </p>
+      </div>
+      <nav class="level is-mobile">
+        <div class="level-left">
+          <a class="level-item">
+            <span class="icon is-small"><i class="fas fa-reply"></i></span>
+          </a>
+          <a class="level-item">
+            <span class="icon is-small"><i class="fas fa-retweet"></i></span>
+          </a>
+          <a class="level-item">
+            <span class="icon is-small"><i class="fas fa-heart"></i></span>
+          </a>
+        </div>
+      </nav>
+    </div>
+    <div class="media-right">
+      <label class="checkbox">
+        <input type="checkbox">
+      </label>
+    </div>
+  </article>
+  <form>
+    <textarea class="textarea" placeholder="Note"></textarea>
+    <div class="has-text-centered mt-1">
+      <button class="button is-link">Submit</button>
+    </div>
   </form>
 </body>
