--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -9,9 +9,12 @@
   <nav class="navbar" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
       <div class="navbar-item mt-2">
-        <figure class="image is-32x32">
-          <img src="assets/lobster.jpg">
-        </figure>
+        <!-- TODO: Add our website URL -->
+        <a href="">
+          <figure class="image is-32x32">
+            <img src="assets/lobster.jpg">
+          </figure>
+        </a>
       </div>
       <div class="navbar-item">
         <h1 class="title is-4">Lobster Ice Cream</h1>
@@ -21,41 +24,30 @@
   <form>
     <input class="input" />
   </form>
-  <article class="media">
-    <div class="media-content">
-      <div class="content">
-        <p>
-          <strong>John Smith</strong> <small>@johnsmith</small>
-          <small>31m</small>
-          <br>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare
-          magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa
-          sem. Etiam finibus odio quis feugiat facilisis.
-        </p>
-      </div>
-      <nav class="level is-mobile">
-        <div class="level-left">
-          <a class="level-item">
-            <span class="icon is-small"><i class="fas fa-reply"></i></span>
-          </a>
-          <a class="level-item">
-            <span class="icon is-small"><i class="fas fa-retweet"></i></span>
-          </a>
-          <a class="level-item">
-            <span class="icon is-small"><i class="fas fa-heart"></i></span>
-          </a>
+  <div class="card my-2">
+    <header class="card-header">
+      <p class="card-header-title">
+        Lobster Ice Creamery
+      </p>
+    </header>
+    <div class="card-content">
+      <div class="columns is-mobile is-vcentered">
+        <div class="column is-11">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
+          ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non
+          massa sem. Etiam finibus odio quis feugiat facilisis.
         </div>
-      </nav>
+        <div class="column is-1 is-centered">
+          <label class="level-item checkbox">
+            <input type="checkbox">
+          </label>
+        </div>
+      </div>
     </div>
-    <div class="media-right">
-      <label class="checkbox">
-        <input type="checkbox">
-      </label>
-    </div>
-  </article>
+  </div>
   <form>
     <textarea class="textarea" placeholder="Note"></textarea>
-    <div class="has-text-centered mt-1">
+    <div class="mt-1 has-text-centered">
       <button class="button is-link">Submit</button>
     </div>
   </form>
