Add font awesome support to the prototype.

--- a/webapp-client/prototype/index.html
+++ b/webapp-client/prototype/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Lobster Ice Cream</title>
-  <link href="./bulma.min.css" rel="stylesheet">
+  <link href="./css/font-awesome.min.css" rel="stylesheet">
+  <link href="./css/bulma.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -29,7 +30,6 @@
       <nav class="panel">
         <div class="panel-block">
           <p class="control has-icons-left">
-            <!-- Replace this with a working search icon -->
             <input class="input" type="text" placeholder="Search">
             <span class="icon is-left">
               <i class="fas fa-search" aria-hidden="true"></i>
