--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -2,55 +2,15 @@
 
 <head>
   <!-- TODO: Add http://clipart-library.com/lobster-cliparts.html somewhere in the extension -->
-  <title>Travel Idea Clipper</title>
+  <title>Travel Idea Clipper PopUp</title>
   <script src="popup.js"></script>
   <link href="assets/bulma.min.css" rel="stylesheet">        
 </head>
-<body class="mx-4 my-4">
-  <nav class="navbar" role="navigation" aria-label="main navigation">
-    <div class="navbar-brand">
-      <div class="navbar-item mt-2">
-        <!-- TODO: Add our website URL -->
-        <a href="">
-          <figure class="image is-32x32">
-            <img src="assets/lobster.jpg">
-          </figure>
-        </a>
-      </div>
-      <div class="navbar-item">
-        <h1 class="title is-4">Lobster Ice Cream</h1>
-      </div>
-    </div>
-  </nav>
-  <form id="itemForm">
-    <input class="input" />
-    <textarea class="textarea my-2" id="highlight"></textarea>
-  </form>
-  <div class="card my-2">
-    <header class="card-header">
-      <p class="card-header-title">
-        Lobster Ice Creamery
-      </p>
-    </header>
-    <div class="card-content">
-      <div class="columns is-mobile is-vcentered">
-        <div class="column is-11">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
-          ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non
-          massa sem. Etiam finibus odio quis feugiat facilisis.
-        </div>
-        <div class="column is-1 is-centered">
-          <label class="level-item checkbox">
-            <input type="checkbox">
-          </label>
-        </div>
-      </div>
-    </div>
+<body>
+  <div class="px-6 py-6">
+    <p>Keep track of all your travel ideas as you browse the web!</p>
+    <p>Simply select text on the webpage and click save!<p>
+    <a href="" target="_blank">Visit Your Account</a>
   </div>
-  <form>
-    <textarea class="textarea" placeholder="Note"></textarea>
-    <div class="mt-1 has-text-centered">
-      <button class="button is-link">Submit</button>
-    </div>
-  </form>
+  <!-- TODO: Display description of the extension and perhaps link to authentication-->
 </body>
