--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -4,7 +4,7 @@
   <!-- TODO: Add http://clipart-library.com/lobster-cliparts.html somewhere in the extension -->
   <title>Travel Idea Clipper PopUp</title>
   <script src="popup.js"></script>
-  <link href="assets/bulma.min.css" rel="stylesheet">        
+  <link href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css" rel="stylesheet">        
 </head>
 <body>
   <div class="px-6 py-6">
