--- a/webapp-client/public/index.html
+++ b/webapp-client/public/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link href="fontawesome-free-5.13.1-web/css/all.css" rel="stylesheet" />
+    <link
+      href="%PUBLIC_URL%/fontawesome-free-5.13.1-web/css/all.css"
+      rel="stylesheet"
+    />
     <link rel="icon" href="%PUBLIC_URL%/lobster_icon.jpg" />
     <link rel="stylesheet" href="%PUBLIC_URL%/bulma.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
