--- a/webapp-client/public/index.html
+++ b/webapp-client/public/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="https://apis.google.com/js/platform.js"></script>
+    <meta
+      name="google-signin-client_id"
+      content="754826226409-b9lm9u3d3r59ne301dti1ajbosnkjga5.apps.googleusercontent.com"
+    />
     <meta charset="utf-8" />
     <link
       href="%PUBLIC_URL%/fontawesome-free-5.13.1-web/css/all.css"
