add link to webapp and other fixes

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -10,7 +10,7 @@
   <div class="px-6 py-6">
     <p>Keep track of all your travel ideas as you browse the web!</p>
     <p>Simply select text on the webpage and click save!<p>
-    <a href="" target="_blank">Visit Your Account</a>
+    <a href="http://localhost:3000" target="_blank">Visit Your Account</a>
   </div>
   <!-- TODO: Display description of the extension and perhaps link to authentication-->
 </body>
